# Google-Capstone-Project

./: .agents-cli-spec.md  .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRODUCTION_TEST_PLAN.md  README.md  SUBMISSION_POLISH_PLAN.md  pyproject.toml  pytest.ini  requirements.txt  test_db.py
.agents/: .sync-manifest.json  settings.json
.agents/agents/: harness-governor.md  memory-state-reviewer.md  security-reviewer.md  verification-runner.md
.agents/commands/: harness-audit.md  harness-status.md  pre-commit-gate.md  sync-agents-md.md
.agents/memory/: README.md  handoff-protocol.md  project.md
.agents/references/: critical-defaults.md  known-baselines.md  source-policy.md  state-contract.md
.agents/rules/: brevity.md  engineering.md  security.md
.claude/: launch.json  settings.json
.claude/agents/: harness-governor.md  memory-state-reviewer.md  security-reviewer.md  verification-runner.md
.claude/commands/: handoff.md  harness-audit.md  pre-commit-gate.md  sync-agents-md.md
.claude/memory/: README.md  handoff-protocol.md  project.md
.claude/references/: critical-defaults.md  known-baselines.md  source-policy.md  state-contract.md
.claude/rules/: brevity.md  testing.md
.tmp_showcase_validation/database/: app_manifest.json  manifest.json  query_showcase.json
.tmp_showcase_validation/extraction/: app_manifest.json  manifest.json
.tmp_showcase_validation/multimodal/: app_manifest.json  manifest.json
Project Wiki/: Architecture Views.base  Home.md  Modules.base
Project Wiki/01 Overview/: Course Concepts Map.md  Problem & Solution.md  Problem and Solution.md
Project Wiki/02 Architecture/: Agent Architecture.md  Architecture Board.canvas  Diagram Atlas.md  Model Registry.md  Module Dependency Graph.md  Module Reference.md  System Overview.md
Project Wiki/03 Processes/: DB Intelligence Pipeline.md  Deployment Pipeline.md  Development Workflow.md  End-to-End Request Flow.md  Human-in-the-Loop Approval.md  Image Extraction Pipeline.md  Patient QA Pipeline.md
Project Wiki/04 Security/: Security Layers.md
Project Wiki/05 Memory/: Memory Layers.md
Project Wiki/06 Operations/: Clinical App.md  Deployment.md  MCP and A2A.md  Observability.md  REST API and Developer Console.md  Testing & Eval.md  Testing and Eval.md
Project Wiki/07 Harness/: Claude Harness.md
Project Wiki/_generated/: Changelog.md  Drift Report.md  Harness Index.md  Module Inventory.md  Test Inventory.md
capstone_agent/: README.md  __init__.py  a2a_server.py  agent.py  app.py  callbacks.py  clinical_schemas.py  config.py  context.py  database.py  document_processor.py  human_in_the_loop.py  llm.py  memory.py  mock_data.py  models.py  observability.py  orchestration.py  plugins.py  prompts.py  security.py  tools.py  vector_store.py
clinical-ai-command-center/: README.md
clinical-ai-command-center/project/: .thumbnail  Clinician AI KIT.dc.html
clinical_app/: README.md  __init__.py  agent_runtime.py  app.py  document.py  live_bridge.py  models.py  repository.py  system.py  tenancy.py
deployment/: Dockerfile  README.md  cloudbuild.yaml
docs/: CAPSTONE_GUIDE.md  README.md  architecture.md
docs/clinical-product/: AI_FIRST_REMEDIATION_PLAN.md  HARNESS_SPECIALIZATION.md  README.md  REQUIREMENTS_MATRIX.md  SWARM_DELIVERY_PLAN.md
docs/submission/: demo-script.md  final-production-push-checklist.md  kaggle-writeup.md  media-gallery.md  writeup-facts.md
docs_site/: index.html
docs_site/llm-wiki/: log.html
eval/: README.md  capstone.evalset.json  test_config.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  Onboarding.test.tsx  Onboarding.tsx  OrchestrationPanel.tsx  Shell.tsx  api.ts  components.tsx  context.tsx  diagrams.ts  fallbackData.ts  main.tsx  plotly.d.ts  runHistory.ts  styles.css  types.ts  useApi.ts
mcp_server/: README.md  server.py
raw/: .gitkeep
raw/api-operations/: 2026-07-05-rest-api-and-developer-console.md
raw/architecture/: 2026-07-04-agent-architecture.md  2026-07-04-model-registry.md  2026-07-04-module-dependency-graph.md  2026-07-04-module-reference.md  2026-07-04-system-overview.md  2026-07-05-diagram-atlas.md  2026-07-05-system-overview.md
raw/harness/: 2026-07-04-claude-harness.md
raw/operations/: 2026-07-04-clinical-app.md  2026-07-04-deployment.md  2026-07-04-mcp-and-a2a.md  2026-07-04-observability.md  2026-07-04-testing-eval.md  2026-07-05-clinical-app.md  2026-07-05-rest-api-and-developer-console.md
scripts/: README.md  build_docs_site.py  build_llm_wiki.py  build_vector_index.py  check_harness.py  check_source_safety.py  export_diagrams.py  generate_database_showcase.py  generate_database_showcase_demo2.py  generate_extraction_showcase.py  generate_extraction_showcase_demo2.py  generate_live_test_data.py  generate_multimodal_patient_showcase.py  generate_multimodal_patient_showcase_demo2.py  harness_runtime.py  ingest_capstone_live_samples.py  run_clinical_app_dev.py  showcase_clinical_core.py  sync_harness.py  sync_wiki.py
showcase_templates/: README.md  database_sample.json  database_template.json  extraction_sample.json  extraction_template.json  multimodal_sample.json  multimodal_template.json
tests/: README.md  conftest.py  test_agent_eval.py  test_callbacks.py  test_clinical_api.py  test_clinical_tools.py  test_context.py  test_document_parsing.py  test_eval.py  test_harness_runtime.py  test_live_bridge.py  test_live_ingestion.py  test_memory.py  test_orchestration.py  test_product_integration.py  test_product_orchestration.py  test_security.py  test_showcase_generators.py  test_template_generators.py  test_tools.py  test_vector_store.py  test_versioned_api.py  test_wiki_sync.py
wiki/: .gitkeep  index.md  log.md
wiki/harness/: claude-harness.md
(+481 files in other folders)
