# =============================================================================
# Google Capstone Project — canonical dependency manifest
#
# `uv sync` resolves this file into uv.lock (hash-pinned, reproducible) and
# installs the environment. requirements.txt is kept only as the deployment
# mirror consumed by deployment/Dockerfile; edit dependencies HERE first, then
# mirror any change into requirements.txt.
# =============================================================================

[project]
name = "nexus-clinical-ai-capstone"
version = "1.0.0"
description = "Clinical AI Command Center - Google ADK capstone for Kaggle's 5-Day AI Agents intensive course."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    # Core framework (Day 1-5). [a2a] pulls the Agent2Agent stack (Day 5a),
    # [db] pulls sqlalchemy for DatabaseSessionService (Day 3a).
    "google-adk[a2a,db]>=2.3.0",
    # Google Generative AI SDK (types, Gemini)
    "google-genai",
    # Vertex AI / Agent Engine deploy + Memory Bank (Day 5b / 3b)
    "google-cloud-aiplatform",
    # Environment management
    "python-dotenv",
    # MCP server + client (Day 2a/2b)
    "mcp[cli]",
    # Tool I/O validation
    "pydantic",
    # HTTP (external tools + A2A client used in Day 5a)
    "httpx",
    "requests",
    # A2A serving (Day 5a): to_a2a returns an ASGI app served by uvicorn
    "uvicorn",
    # Clinical product API + multipart session-image uploads
    "fastapi",
    "python-multipart",
    "PyMuPDF",
    "Pillow",
    # Clinical visualization exports and analysis notebooks
    "matplotlib",
    # Enterprise showcase generation (clinical record PDF volumes)
    "reportlab",
    # Documentation hub build (scripts/build_docs_site.py)
    "markdown-it-py",
    # Persistent sessions (Day 3a DatabaseSessionService); also via google-adk[db]
    "sqlalchemy",
    # Observability - OpenTelemetry (Day 4a)
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-gcp-trace",
    "opentelemetry-instrumentation-google-genai",
]

[dependency-groups]
# Installed by default with `uv sync`; excluded from production images.
dev = [
    # Evaluation (Day 4b). Keep ADK's optional scorer stack out of production.
    "deepeval",
    "google-adk[eval]>=2.3.0",
    # Testing
    "pandas",
    "pytest",
    "pytest-asyncio",
    # Repository pre-commit formatting and lint gate.
    "ruff==0.15.20",
]

[tool.uv]
# This repo is an application (agent package + FastAPI app + scripts), not an
# installable distribution - uv manages the environment without building it.
package = false

[tool.ruff]
# Vendored agent skills have their own upstream style and release lifecycle.
exclude = [".agents", ".claude"]

[tool.ruff.lint.per-file-ignores]
# These modules intentionally initialize environment/path state before imports.
"clinical_app/app.py" = ["E402"]
"mcp_server/server.py" = ["E402"]
"scripts/generate_live_test_data.py" = ["E402"]
"scripts/ingest_capstone_live_samples.py" = ["E402"]
"tests/test_wiki_sync.py" = ["E402"]
